[package]
name = "bevy_dev"
version = "0.3.1"
authors = ["Vixen <infvix@gmail.com>"]
description = "Dev tools for Bevy Engine"
keywords = ["prototype", "devtools", "textures", "assets"]
categories = ["game-engines", "game-development"]
readme = "README.md"
repository = "https://github.com/ka-de/bevy_dev"
license = "MIT"
edition = "2021"

[features]
default = ["ui"]
ui = ["dep:bevy_egui"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
  "bevy_render",
  "bevy_pbr",
  "png",
] }
random_color = "0.8.0"
rust-embed = "8.3.0"
uuid = "1.7.0"

bevy_egui = { git = "https://github.com/ka-de/bevy_egui", branch = "0.14", optional = true }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
  "bevy_winit",
  "tonemapping_luts",
] }
